syntax = "proto3";

package bytebase.store;

import "store/common.proto";

option go_package = "generated-go/store";

message Task {
  enum Type {
    TASK_TYPE_UNSPECIFIED = 0;
    DATABASE_CREATE = 1;
    DATABASE_MIGRATE = 2;
    DATABASE_EXPORT = 5;
    DATABASE_SDL = 6;
  }

  // MigrateType is the database migration type.
  enum MigrateType {
    MIGRATE_TYPE_UNSPECIFIED = 0;
    DDL = 1;
    DML = 2;
    GHOST = 3;
  }

  // common fields
  bool skipped = 1;
  string skipped_reason = 2;
  string spec_id = 3;
  int32 sheet_id = 4;

  // Create database fields.
  string environment_id = 5;
  string database_name = 6;
  string table_name = 7;
  string character_set = 8;
  string collation = 9;

  // Update database fields.
  string schema_version = 10;
  bool enable_prior_backup = 11;
  // ghost flags.
  map<string, string> flags = 12;
  TaskReleaseSource task_release_source = 13;
  MigrateType migrate_type = 16;

  // Export data fields.
  string password = 14;
  ExportFormat format = 15;
}

message TaskReleaseSource {
  // Format: projects/{project}/releases/{release}/files/{id}
  string file = 1;
}
